# rust-cubes-demo

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs
src/game/: Cargo.toml  cube.rs  lib.rs  mod.rs  physics.rs
src/opengl_util/: Cargo.toml  lib.rs  shader.rs  shape.rs  texture.rs  vertex.rs
src/sdl_opengl/: mod.rs  renderer.rs
src/sdl_opengl/shaders/: fragment.glsl  vertex.glsl
src/shaders/: fragment.glsl  vertex.glsl
src/util/: Cargo.toml  compare.rs  lib.rs  matrix.rs  mod.rs
wasm_files/: index.html  rust-cubes-demo.wasm
